[gd_scene load_steps=31 format=2]

[ext_resource path="res://BenBonk Sprites/CharacterSpritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://BenBonk Sprites/Moving Rock.png" type="Texture" id=3]
[ext_resource path="res://BenBonk Sprites/Jump Slime.png" type="Texture" id=4]
[ext_resource path="res://BenBonk Sprites/DamageStar.png" type="Texture" id=5]
[ext_resource path="res://BenBonk Sprites/JumpEffect.png" type="Texture" id=6]
[ext_resource path="res://Sound/Jump.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Die.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 13.8007, 20.3886 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 15.1949
height = 13.8244

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 13.31
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -524.6
angle_random = 0.44

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 57.69
angular_velocity = 720.0
angular_velocity_random = 0.83
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 193.8
angle_random = 0.17
scale = 2.0

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 13.85
flatness = 0.59
gravity = Vector3( 0, 98, 0 )
initial_velocity = 269.62
orbit_velocity = -0.3
orbit_velocity_random = 0.0
angle = 304.6
angle_random = 1.0

[sub_resource type="Curve" id=15]
min_value = -500.0
max_value = 500.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 22.33
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = SubResource( 16 )
angle = 241.0
angle_random = 1.0
scale = 1.7
scale_random = 0.01

[sub_resource type="Curve" id=18]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 18 )

[sub_resource type="Curve" id=20]
min_value = -500.0
max_value = 500.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=22]
emission_shape = 1
emission_sphere_radius = 26.21
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 1.0
angular_velocity_random = 1.0
orbit_velocity = 1.0
orbit_velocity_random = 1.0
orbit_velocity_curve = SubResource( 21 )
angle = 180.0
angle_random = 1.0
angle_curve = SubResource( 19 )
scale = 3.0
scale_random = 1.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 9 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0500336, 10.4298 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.411972, 10.29 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Jump" type="Particles2D" parent="."]
position = Vector2( 0.487671, 19.6913 )
scale = Vector2( 3, 3 )
emitting = false
amount = 3
lifetime = 0.1
one_shot = true
process_material = SubResource( 12 )
texture = ExtResource( 4 )

[node name="SmallSlime" type="Particles2D" parent="."]
position = Vector2( 0.487671, 19.6913 )
scale = Vector2( 2, 2 )
emitting = false
amount = 4
lifetime = 0.3
one_shot = true
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 4 )

[node name="Moving" type="Particles2D" parent="."]
modulate = Color( 0.505882, 0.505882, 0.505882, 1 )
position = Vector2( 0.273033, 24.628 )
lifetime = 0.1
speed_scale = 0.25
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 3 )

[node name="Death" type="Particles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.3
one_shot = true
local_coords = false
process_material = SubResource( 17 )
texture = ExtResource( 5 )

[node name="Revive" type="Particles2D" parent="."]
emitting = false
one_shot = true
local_coords = false
process_material = SubResource( 22 )
texture = ExtResource( 6 )

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 2e+10
bus = "Death"

[node name="Jump2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
max_distance = 2e+10
bus = "Music"
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Dead" to="." method="_on_Dead_finished"]
[connection signal="finished" from="Jump2" to="." method="_on_Jump2_finished"]
